my reserv, popup-cancel-req start

--- a/app/blocks/box/box.scss
+++ b/app/blocks/box/box.scss
@@ -55,6 +55,12 @@
     height: 17px;
   }
 
+  &_size26 {
+    min-width: 26px;
+    width: 26px;
+    height: 26px;
+  }
+
   &_size32 {
     min-width: 32px;
     width: 32px;
