--- a/app/blocks/note/note.pug
+++ b/app/blocks/note/note.pug
@@ -4,3 +4,10 @@ mixin note
       +icon('info').__icon
     +e.text
       block
+
+mixin note-warning
+  +b.note_warning&attributes(attributes)
+    +e.mark
+      +icon('warning').__icon_warning
+    +e.text
+      block
