--- a/app/blocks/popups/popups.scss
+++ b/app/blocks/popups/popups.scss
@@ -85,6 +85,16 @@
       }
     }
 
+    &_mg28 {
+      &:not(:last-child) {
+        margin-bottom: 28px;
+
+        @include screen('sm') {
+          margin-bottom: 14px;
+        }
+      }
+    }
+
     &_big {
       @include heading-2;
 
