--- a/app/blocks/space/space.pug
+++ b/app/blocks/space/space.pug
@@ -52,6 +52,9 @@ mixin space-reserv(tag, data)
   +b(tag || 'a').space&attributes(attributes)
     if data.type
       +e(class="head " + data.type.color)!= data.type.name
+    if data.head
+      +e(class="head_base " + data.head.base)!= data.head.name
+        +box()(class="_size32 " + data.head.color + " __head-box")
     +e.DIV.media
       +e.IMG.image(src=data.img)
       if data.heart
@@ -59,12 +62,41 @@ mixin space-reserv(tag, data)
       if data.heart2
         +button-heart.js-heart.__heart(class=data.heart2.class)
       if data.flag
-        +e.flag!= flag
+        +e.flag
+          +e.flag-name!= data.flag
     +e.DIV.describe
       if data.boxes
         +boxes.__boxes
           each item in data.boxes
             +box(class='_small ' + item.class)
       +e.title!= data.title
-      +e.location!= data.location
+      if data.location
+        +e.location!= data.location
+    block
+
+
+mixin space-reserv-small(tag, data)
+  +b(tag || 'a').space&attributes(attributes)
+    if data.type
+      +e(class="head_lh26 " + data.type.color)!= data.type.name
+    if data.head
+      +e(class="head_lh26 _base " + data.head.base)!= data.head.name
+        +box()(class="_size26 " + data.head.color + " __head-box")
+    +e.DIV.media
+      +e.IMG.image(src=data.img)
+      if data.heart
+        +button-heart.js-heart.is-active.__heart(class=data.heart.class)
+      if data.heart2
+        +button-heart.js-heart.__heart(class=data.heart2.class)
+      if data.flag
+        +e.flag
+          +e.flag-name!= data.flag
+    +e.DIV.describe
+      if data.boxes
+        +boxes.__boxes
+          each item in data.boxes
+            +box(class='_small ' + item.class)
+      +e.title_small!= data.title
+      if data.location
+        +e.location_small!= data.location
     block
