--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -39,6 +39,7 @@ block content
         +link(href="new-space-step7.html") SpacePool - HOST My rental offers New Space Step 7 (new-space-step7.html)
         +link(href="edit-space-location.html") SpacePool -Edit Space page - location (edit-space-location.html)
         +link(href="search-result.html") SpacePool - Search result (ждем финалку дизайна для мобилок и фильтр под планшет и мобилку) (search-result.html)
+        //- +link(href="reservations.html") SpacePool - My reservations (reservations.html)
 
       +page-title._small Попапы
       +e.list
@@ -47,6 +48,7 @@ block content
         +link(href="#popup-arrange-viewing").js-popup Popup Arrange Viewing
         +link(href="#popup-subscribe").js-popup Popup subscribe
         +link(href="#popup-subscribe-host").js-popup Popup subscribe for host
+        //- +link(href="#popup-cancel-request").js-popup Popup cancel request
 
 block panels
   +main-menu
@@ -56,3 +58,4 @@ block popups
   +popup-arrange-viewing#popup-arrange-viewing
   +popup-subscribe#popup-subscribe
   +popup-subscribe-host#popup-subscribe-host
+  +popup-cancel-request#popup-cancel-request
