--- a/app/blocks/space/space.pug
+++ b/app/blocks/space/space.pug
@@ -93,7 +93,7 @@ mixin space-reserv-small(tag, data)
           +e.flag-name!= data.flag
     +e.DIV.describe
       if data.boxes
-        +boxes.__boxes
+        +boxes(class='__boxes' + data.boxesMg)
           each item in data.boxes
             +box(class='_small ' + item.class)
       +e.title_small!= data.title
