--- a/app/blocks/space/space.scss
+++ b/app/blocks/space/space.scss
@@ -91,6 +91,10 @@
         margin-bottom: 4px;
       }
     }
+
+    &_mgt0 {
+      margin-top: 0;
+    }
   }
 
   &__seats {
@@ -197,14 +201,14 @@
 
     &_base {
       padding-left: 35px;
-      padding-right: 35px;
+      padding-right: 3px;
       line-height: (32/15);
       box-sizing: border-box;
     }
 
     &_lh26 {
       padding-left: 30px;
-      padding-right: 30px;
+      padding-right: 4px;
       line-height: (26/15);
     }
 
