--- a/app/components/popup-cancel-request/popup-cancel-request.pug
+++ b/app/components/popup-cancel-request/popup-cancel-request.pug
@@ -1,14 +1,14 @@
 mixin popup-cancel-request()
   +popup-origin.popup-cancel-request__&attributes(attributes)
     +popup-content
-      +popup-title.popup__title_big.popup__title_mg28 Request cancellation
+      +popup-title.popup__title_big.popup__title_mg48 Request cancellation
       +e.SECTION.section
         +e.column_space
-          +space-reserv-small('div', { head: { base: '_black', color: '_blue', name: 'MEETING ROOM'}, img: 'assets/images/space25.jpg', boxes: [{ class: '_orange'}, {class: '_red'}, {class: '_blue'}], title: 'Blooming Founders (Former Blooms Lon...'})._around
+          +space-reserv-small('div', { head: { base: '_black', color: '_blue', name: 'MEETING ROOM'}, img: 'assets/images/space25.jpg', boxes: [{ class: '_orange'}, {class: '_red'}, {class: '_blue'}], boxesMg: '_mgt0', title: 'Blooming Founders (Former Blooms Lon...'})
         +e.column_note
           +note-warning._color._bold._fz20 You are about to cancel your reservation or current service. Before you confirm your decision we want you to know:
       +e.SECTION.section
-        +ul-list._big
+        +ul-list.list_big
           li You will not be able to get a refund paid till the end of this month.
           li Security Deposit will be refunded within 14 days after cancellation
           li You will get your security deposit refund if Workplace provider don’t have any complaints to you
