--- a/app/components/search-filter/search-filter.pug
+++ b/app/components/search-filter/search-filter.pug
@@ -8,4 +8,4 @@ mixin search-filter()
         +filter-search._search.__filter
         +e.buttons
           +link-icon('round-cross', 'button')(type="reset"  data-target-form="location-filter-big")._icon_gray._no-shadow._bold._icon_mid-small.__button.js-simple-reset Clear filter
-          +link-icon('map')._icon_gray._no-shadow._bold._icon_pad27.__button.hide-md.js-toggle-map(href="#" data-target-map="map" data-closed-title="Show Map" data-opened-title="Hide Map") Hide Map
+          +link-icon('map')._icon_gray._no-shadow._bold._icon_pad27.__button.hide-md.js-toggle-map.is-active(href="#" data-target-map="map" data-closed-title="Show Map" data-opened-title="Hide Map") Hide Map
