--- a/app/components/search-filter/search-filter.scss
+++ b/app/components/search-filter/search-filter.scss
@@ -48,7 +48,7 @@
   &__content {
     position: relative;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
     flex-wrap: wrap;
     box-sizing: border-box;
@@ -72,6 +72,7 @@
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    margin-left: auto;
   }
 
   &__button {
