--- a/app/components/search-map/search-map.scss
+++ b/app/components/search-map/search-map.scss
@@ -16,6 +16,7 @@
   @include screen('md') {
     position: fixed;
     width: 100%;
+    height: calc(100% - 185px);
     top: 185px;
     left: 0;
     z-index: 9;
@@ -24,13 +25,16 @@
 
     @include screen('sm') {
       top: 144px;
+      height: calc(100% - 144px);
     }
 
     .page.is-short & {
       top: 140px;
+      height: calc(100% - 140px);
 
       @include screen('sm') {
         top: 120px;
+        height: calc(100% - 120px);
       }
     }
   }
@@ -44,6 +48,13 @@
       width: 100%;
       opacity: 0;
       pointer-events: none;
+    }
+  }
+
+  .sidebar {
+
+    @include screen('md') {
+      height: 100%;
     }
   }
 
