--- a/app/pages/search-result/search-result.pug
+++ b/app/pages/search-result/search-result.pug
@@ -47,7 +47,7 @@ block content
                           +e.title HOT DESK
                           +e.price from 450 &pound;/mo
           +pagination._mgt32._md-centered
-        +search-map.__column_map(data-map="map")
+        +search-map.__column_map.is-closed(data-map="map")
           +sidebar._no-bg(data-unstick-media="md")
             +map._side#searchMap
         +map-switch.js-show-map(data-target-map="map")
