--- a/app/blocks/grid/grid.scss
+++ b/app/blocks/grid/grid.scss
@@ -112,6 +112,10 @@ $new-breakpoints: map_remove($breakpoints, $default-breakpoit-name);
 
   &_int48 {
     margin-top: -48px;
+
+    @include screen('sm') {
+      margin-top: -38px;
+    }
   }
 
   &_reserv {
@@ -277,6 +281,10 @@ $new-breakpoints: map_remove($breakpoints, $default-breakpoit-name);
 
     #{$b}_int48 & {
       padding-top: 48px;
+
+      @include screen('sm') {
+        padding-top: 38px;
+      }
     }
 
     #{$b}_mid & {
