--- a/app/blocks/hide-button/hide-button.scss
+++ b/app/blocks/hide-button/hide-button.scss
@@ -8,6 +8,10 @@
   padding: 8px;
   background-color: $color-white;
 
+  @include screen('sm') {
+    padding: 7px;
+  }
+
   &__text {
     @include text12;
 
@@ -24,5 +28,10 @@
   &__icon {
     width: 15px;
     height: 15px;
+
+    @include screen('sm') {
+      width: 8px;
+      height: 8px;
+    }
   }
 }
