--- a/app/blocks/slider/slider.pug
+++ b/app/blocks/slider/slider.pug
@@ -47,6 +47,21 @@ mixin slider-gallery-bold(buttons, loupe)
       +e.A.loupe.js-open-gallery(data-targets="gallery")
         +icon('loupe').__loupe-icon
 
+mixin slider-gallery-bold2(buttons, loupe)
+  +b.slider__._gallery._dark2&attributes(attributes)
+    +e.container.swiper-container.js-slider-container
+      .swiper-wrapper
+        block
+    if buttons
+      +e.buttons_simple
+        +e.button._prev.js-slider-button-prev
+          +icon('slider-arrow-bold').__button-icon
+        +e.button._next.js-slider-button-next
+          +icon('slider-arrow-bold').__button-icon
+    if loupe
+      +e.A.loupe.js-open-gallery(data-targets="gallery")
+        +icon('loupe').__loupe-icon
+
 mixin slider-calendar(buttons)
   +b.slider__._calendar&attributes(attributes)
     +e.container.swiper-container.js-slider-container
