--- a/app/components/content/content.scss
+++ b/app/components/content/content.scss
@@ -199,6 +199,8 @@
       @include screen('md') {
         padding-left: 15px;
         padding-right: 15px;
+        width: 100%;
+        flex: none;
       }
 
       @include screen('sm') {
