--- a/app/components/results/results.scss
+++ b/app/components/results/results.scss
@@ -10,6 +10,10 @@
     padding-top: 43px;
   }
 
+  @include screen('sm') {
+    padding-top: 20px;
+  }
+
   &__full,
   &__short {
     display: block;
