--- a/app/pages/search-result/search-result.pug
+++ b/app/pages/search-result/search-result.pug
@@ -21,7 +21,7 @@ block content
                 +space-short('a').js-map-marker-activator(href="#" data-map-marker=item.id)
                   +space-short-side
                     +space-short-media()
-                      +slider-gallery-bold(true, false)._dark2._gallery_inner.js-slider-gallery.__gallery
+                      +slider-gallery-bold2(true, false)._gallery_inner.js-slider-gallery.__gallery
                         each slider in item.slider
                           +e.IMG.slide.swiper-slide(src=slider)
                   +space-short-content
@@ -40,7 +40,7 @@ block content
               +grid.grid_layout.grid_int48
                 each item in spaces2
                   +col({xl: 6, sm: 12})
-                    +space-reserv('a', item)._show-heart.__space(href="#")
+                    +space-reserv-gallery('a', item)._search.__space(href="#")
                       +e.DIV.offer
                         +offer-info._small._small_light
                           +box._size9._orange
