--- a/app/blocks/map/map.scss
+++ b/app/blocks/map/map.scss
@@ -31,6 +31,7 @@
 
 .map-icon {
   $i: &;
+
   position: relative;
   display: block;
 
@@ -87,6 +88,12 @@
     width: auto;
     margin: 0;
     padding: 0 5px;
+
+    @include screen('sm') {
+      @include text13;
+
+      line-height: (24/13);
+    }
   }
 
   .leaflet-popup {
