--- a/app/blocks/space/space.scss
+++ b/app/blocks/space/space.scss
@@ -30,10 +30,23 @@
         margin-bottom: 7px;
       }
     }
+
+    &_gallery {
+      overflow: visible;
+      background-color: $color-hint-bg;
+    }
   }
 
   &__image {
     @include fill-img;
+  }
+
+  &__gallery {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
   }
 
   &__heart {
@@ -42,6 +55,7 @@
     right: 19px;
     transition: opacity $ease-main;
     opacity: 0;
+    z-index: 2;
 
     @include screen('lg') {
       top: 15px;
@@ -119,13 +133,14 @@
 
   &__title {
     @include heading-4;
+    @include ellipsis(100%);
 
     font-weight: 700;
     transition: color $ease-main;
 
-    @include screen('sm', min) {
-      @include ellipsis(100%);
-    }
+    // @include screen('sm', min) {
+    //   @include ellipsis(100%);
+    // }
 
     @include screen('sm') {
       @include text15;
@@ -225,11 +240,48 @@
     width: 100%;
     margin-top: 5px;
 
+    @include screen('sm') {
+      margin-top: -3px;
+    }
+
     .offer-info {
 
+      .box {
+        align-self: center;
+
+        @include screen('sm') {
+          margin-top: -3px;
+          margin-right: 4px;
+        }
+      }
+
+      &__head {
+        display: inline-flex;
+        align-items: baseline;
+      }
+
       &__title {
+
+        @include screen('sm') {
+          @include text12;
+
+          line-height: 1;
+        }
+
         &:not(:last-child) {
           margin-right: 4px;
+
+          @include screen('sm') {
+            margin-right: 3px;
+          }
+        }
+      }
+
+      &__price {
+        @include screen('sm') {
+          @include text12;
+
+          line-height: 1;
         }
       }
     }
@@ -299,17 +351,47 @@
     }
   }
 
+  &_search {
+
+    #{$b} {
+      &__boxes {
+
+        @include screen('sm') {
+          min-height: 9px;
+          margin-top: 9px;
+        }
+
+        .box {
+          @include screen('sm') {
+            height: 9px;
+            width: 9px;
+          }
+        }
+      }
+    }
+  }
+
   &_map {
 
     #{$b} {
       &__boxes {
         margin-top: 6px;
         margin-bottom: 10px;
+
+        @include screen('sm') {
+          margin-top: -5px;
+          margin-bottom: 5px;
+        }
       }
 
       &__heart {
         top: 12px;
         right: 10px;
+
+        @include screen('sm') {
+          top: 6px;
+          right: 6px;
+        }
       }
 
       &__title {
@@ -318,7 +400,7 @@
         line-height: 1.2;
 
         @include screen('sm') {
-          @include text15;
+          @include text;
 
           line-height: 1.2;
         }
@@ -331,12 +413,32 @@
         line-height: 1.2;
 
         @include screen('sm') {
-          @include text12;
+          @include text10;
+
+          line-height: 1.8;
         }
       }
 
       &__offer {
         margin-top: 2px;
+
+        .box {
+          @include screen('sm') {
+            min-width: 7px;
+            width: 7px;
+            height: 7px;
+          }
+        }
+
+        .offer-info {
+
+          &__title,
+          &__price {
+            @include screen('sm') {
+              @include text10;
+            }
+          }
+        }
       }
     }
   }
