--- a/app/components/advanced-filter/advanced-filter.scss
+++ b/app/components/advanced-filter/advanced-filter.scss
@@ -11,6 +11,26 @@
     position: relative;
     z-index: 1;
     max-height: calc(100vh - 185px);
+
+    @include screen('md') {
+      max-height: calc(100vh - 245px);
+    }
+
+    @include screen('sm') {
+      max-height: calc(100vh - 160px);
+    }
+
+    .page.is-short {
+      max-height: calc(100vh - 140px);
+
+      @include screen('md') {
+        max-height: calc(100vh - 200px);
+      }
+
+      @include screen('sm') {
+        max-height: calc(100vh - 136px);
+      }
+    }
   }
 
   &__form {
