--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -38,7 +38,7 @@ block content
         +link(href="new-space-step61.html") SpacePool - HOST My rental offers New Space Step 6-1 (new-space-step61.html)
         +link(href="new-space-step7.html") SpacePool - HOST My rental offers New Space Step 7 (new-space-step7.html)
         +link(href="edit-space-location.html") SpacePool -Edit Space page - location (edit-space-location.html)
-        +link(href="search-result.html") SpacePool - Search result (ждем финалку дизайна для мобилок и фильтр под планшет и мобилку) (search-result.html)
+        //- +link(href="search-result.html") SpacePool - Search result (search-result.html)
         +link(href="reservations.html") SpacePool - My reservations (reservations.html)
 
       +page-title._small Попапы
